# 3DPixelArtGame

./: .gitmodules  CMakeLists.txt  main.cpp
AssetBuilder/: AssetBuilder.cpp  AssetFileFormat.md  CMakeLists.txt
Assets/game/: test.fbx
Assets/game/shaders/: fallback.frag  fallback.vert
Engine/: CMakeLists.txt
Engine/include/Engine/Graphics/: Mesh.h  Shader.h  Texture.h
Engine/src/Engine/Assets/: AssetManager.cpp
Engine/src/Engine/Graphics/: Mesh.cpp  Texture.cpp
include/: Application.h
include/Engine/Assets/: AssetManager.h
include/Engine/Graphics/: Mesh.h  Shader.h
src/: Application.cpp
src/Engine/Assets/: AssetManager.cpp
src/Engine/Graphics/: Mesh.cpp  Shader.cpp
